--- a/FakeXrmEasy.9/packages.config
+++ b/FakeXrmEasy.9/packages.config
@@ -1,28 +1,29 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Castle.Core" version="4.3.1" targetFramework="net452" />
+  <package id="Castle.Core" version="5.1.0" targetFramework="net462" />
   <package id="FakeItEasy" version="7.3.1" targetFramework="net462" />
   <package id="Microsoft.Bcl.AsyncInterfaces" version="6.0.0" targetFramework="net462" />
-  <package id="Microsoft.Extensions.Caching.Abstractions" version="3.1.8" targetFramework="net462" />
-  <package id="Microsoft.Extensions.Caching.Memory" version="3.1.8" targetFramework="net462" />
-  <package id="Microsoft.Extensions.Configuration" version="3.1.8" targetFramework="net462" />
-  <package id="Microsoft.Extensions.Configuration.Abstractions" version="3.1.8" targetFramework="net462" />
-  <package id="Microsoft.Extensions.Configuration.Binder" version="3.1.8" targetFramework="net462" />
-  <package id="Microsoft.Extensions.DependencyInjection" version="3.1.8" targetFramework="net462" />
-  <package id="Microsoft.Extensions.DependencyInjection.Abstractions" version="3.1.8" targetFramework="net462" />
-  <package id="Microsoft.Extensions.Http" version="3.1.8" targetFramework="net462" />
-  <package id="Microsoft.Extensions.Logging" version="3.1.8" targetFramework="net462" />
-  <package id="Microsoft.Extensions.Logging.Abstractions" version="3.1.8" targetFramework="net462" />
-  <package id="Microsoft.Extensions.Options" version="3.1.8" targetFramework="net462" />
-  <package id="Microsoft.Extensions.Primitives" version="3.1.8" targetFramework="net462" />
+  <package id="Microsoft.Extensions.Caching.Abstractions" version="6.0.0" targetFramework="net462" />
+  <package id="Microsoft.Extensions.Caching.Memory" version="6.0.1" targetFramework="net462" />
+  <package id="Microsoft.Extensions.Configuration" version="6.0.1" targetFramework="net462" />
+  <package id="Microsoft.Extensions.Configuration.Abstractions" version="6.0.0" targetFramework="net462" />
+  <package id="Microsoft.Extensions.Configuration.Binder" version="6.0.0" targetFramework="net462" />
+  <package id="Microsoft.Extensions.DependencyInjection" version="6.0.1" targetFramework="net462" />
+  <package id="Microsoft.Extensions.DependencyInjection.Abstractions" version="6.0.0" targetFramework="net462" />
+  <package id="Microsoft.Extensions.Http" version="6.0.0" targetFramework="net462" />
+  <package id="Microsoft.Extensions.Logging" version="6.0.0" targetFramework="net462" />
+  <package id="Microsoft.Extensions.Logging.Abstractions" version="6.0.2" targetFramework="net462" />
+  <package id="Microsoft.Extensions.Options" version="6.0.0" targetFramework="net462" />
+  <package id="Microsoft.Extensions.Primitives" version="6.0.0" targetFramework="net462" />
   <package id="Microsoft.Identity.Client" version="4.47.2" targetFramework="net462" />
   <package id="Microsoft.Identity.Client.Extensions.Msal" version="2.24.0" targetFramework="net462" />
   <package id="Microsoft.IdentityModel.Abstractions" version="6.25.0" targetFramework="net462" />
   <package id="Microsoft.PowerPlatform.Dataverse.Client" version="1.0.23" targetFramework="net462" />
-  <package id="Microsoft.Rest.ClientRuntime" version="2.3.20" targetFramework="net462" />
+  <package id="Microsoft.Rest.ClientRuntime" version="2.3.24" targetFramework="net462" />
   <package id="Newtonsoft.Json" version="13.0.1" targetFramework="net462" />
   <package id="System.Buffers" version="4.5.1" targetFramework="net462" />
-  <package id="System.ComponentModel.Annotations" version="4.7.0" targetFramework="net462" />
+  <package id="System.ComponentModel.Annotations" version="5.0.0" targetFramework="net462" />
+  <package id="System.Diagnostics.DiagnosticSource" version="6.0.0" targetFramework="net462" />
   <package id="System.Memory" version="4.5.5" targetFramework="net462" />
   <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net462" />
   <package id="System.Runtime.CompilerServices.Unsafe" version="6.0.0" targetFramework="net462" />
